--- a/CadastroPessoas/.env.example
+++ b/CadastroPessoas/.env.example
@@ -21,12 +21,17 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+# Estou utilizando o pgsql porém pode ser usado também com mysql
+DB_HOST=127.0.0.1
+# localhost
+DB_PORT=5432
+# Caso utilize mysql troque a porta para a desejada ou padrão 3306
+DB_DATABASE=CaioApresentame
+DB_USERNAME=postgres
+# Usuário onde está o database
+DB_PASSWORD=postgres
+# Senha do usuário onde está o database
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
